--- a/client/src/main/java/com/netcracker/ibublig/catalog/client/view/AdminLayout.fxml
+++ b/client/src/main/java/com/netcracker/ibublig/catalog/client/view/AdminLayout.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.netcracker.ibublig.client.view.controller.AdminController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.netcracker.ibublig.catalog.client.controller.AdminController">
    <children>
       <ListView fx:id="listView" layoutX="14.0" layoutY="8.0" prefHeight="292.0" prefWidth="200.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="390.0" AnchorPane.topAnchor="25.0" />
       <TableView fx:id="categoryTableView" layoutX="211.0" layoutY="100.0" prefHeight="390.0" prefWidth="384.0" AnchorPane.bottomAnchor="35.0" AnchorPane.leftAnchor="210.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="25.0">
