--- a/client/src/main/java/com/netcracker/ibublig/catalog/client/view/AuthorizationLayout.fxml
+++ b/client/src/main/java/com/netcracker/ibublig/catalog/client/view/AuthorizationLayout.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.netcracker.ibublig.client.view.controller.AuthorizationController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.netcracker.ibublig.catalog.client.controller.AuthorizationController">
    <children>
       <Group layoutX="9.0" layoutY="-9.0" AnchorPane.bottomAnchor="153.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="154.0">
          <children>
