--- a/client/src/main/java/com/netcracker/ibublig/catalog/client/view/AdminEditCategoryLayout.fxml
+++ b/client/src/main/java/com/netcracker/ibublig/catalog/client/view/AdminEditCategoryLayout.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.netcracker.ibublig.client.view.controller.AdminEditCategoryController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.netcracker.ibublig.catalog.client.controller.AdminEditCategoryController">
    <children>
       <Button layoutX="15.0" layoutY="35.0" mnemonicParsing="false" onAction="#handleCancel" text="Cancel" />
       <Button layoutX="222.0" layoutY="10.0" mnemonicParsing="false" onAction="#handleOk" text="Ok" />
