--- a/client/src/main/java/com/netcracker/ibublig/catalog/client/view/AdminLayout.fxml
+++ b/client/src/main/java/com/netcracker/ibublig/catalog/client/view/AdminLayout.fxml
@@ -22,13 +22,6 @@
       </TableView>
       <MenuBar AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <menus>
-          <Menu mnemonicParsing="false" text="File">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Load" />
-                  <MenuItem mnemonicParsing="false" text="Save" />
-                  <MenuItem mnemonicParsing="false" text="Save as" />
-            </items>
-          </Menu>
           <Menu mnemonicParsing="false" text="Edit">
             <items>
               <MenuItem mnemonicParsing="false" onAction="#addCategory" text="Add Category" />
@@ -43,9 +36,14 @@
             </Menu>
           <Menu mnemonicParsing="false" text="Help">
             <items>
-              <MenuItem mnemonicParsing="false" text="About" />
+              <MenuItem mnemonicParsing="false" onAction="#handleAbout" text="About" />
             </items>
           </Menu>
+            <Menu mnemonicParsing="false" text="Menu">
+               <items>
+                  <MenuItem mnemonicParsing="false" onAction="#buttonExit" text="Exit" />
+               </items>
+            </Menu>
         </menus>
       </MenuBar>
       <HBox layoutX="459.0" layoutY="365.0" spacing="5.0" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="5.0">
