--- a/client/src/main/java/com/netcracker/ibublig/catalog/client/view/AuthorizationLayout.fxml
+++ b/client/src/main/java/com/netcracker/ibublig/catalog/client/view/AuthorizationLayout.fxml
@@ -12,11 +12,11 @@
       <Group layoutX="9.0" layoutY="-9.0" AnchorPane.bottomAnchor="153.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="154.0">
          <children>
             <TextField fx:id="loginField" layoutX="240.0" layoutY="163.0" />
+            <PasswordField fx:id="passwordField" layoutX="240.0" layoutY="192.0" />
             <Label layoutX="195.0" layoutY="167.0" text="Логин" />
             <Label layoutX="191.0" layoutY="196.0" text="Пароль" />
+            <Button fx:id="auth" layoutX="343.0" layoutY="230.0" mnemonicParsing="false" onAction="#authorization" text="Войти" />
             <Button layoutX="240.0" layoutY="230.0" mnemonicParsing="false" onAction="#registration" text="Регистрация" />
-            <Button layoutX="343.0" layoutY="230.0" mnemonicParsing="false" onAction="#authorization" text="Войти" />
-            <PasswordField fx:id="passwordField" layoutX="240.0" layoutY="192.0" />
          </children>
       </Group>
       <Label layoutX="246.0" layoutY="46.0" text="Авторизация" textAlignment="CENTER" AnchorPane.leftAnchor="190.0" AnchorPane.rightAnchor="190.0" AnchorPane.topAnchor="30.0">
