--- a/client/src/main/java/com/netcracker/ibublig/catalog/client/view/RegistrationLayout.fxml
+++ b/client/src/main/java/com/netcracker/ibublig/catalog/client/view/RegistrationLayout.fxml
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.Group?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.netcracker.ibublig.catalog.client.controller.RegistrationController">
    <children>
       <Group layoutX="9.0" layoutY="20.0" AnchorPane.leftAnchor="174.0" AnchorPane.rightAnchor="174.0" AnchorPane.topAnchor="108.0">
          <children>
-            <TextField fx:id="email" layoutX="269.0" layoutY="183.0" />
-            <Label layoutX="229.0" layoutY="157.0" text="Логин" />
-            <Label layoutX="215.0" layoutY="125.0" text="Фамилия" />
             <Label layoutX="241.0" layoutY="92.0" text="Имя" />
             <TextField fx:id="firstName" layoutX="269.0" layoutY="88.0" />
-            <Label layoutX="232.0" layoutY="187.0" text="EMail" />
+            <Label layoutX="215.0" layoutY="125.0" text="Фамилия" />
             <TextField fx:id="lastName" layoutX="269.0" layoutY="121.0" />
+            <Label layoutX="229.0" layoutY="157.0" text="Логин" />
+            <TextField fx:id="login" layoutX="269.0" layoutY="153.0" />
+            <Label layoutX="232.0" layoutY="187.0" text="EMail" />
+            <TextField fx:id="email" layoutX="269.0" layoutY="183.0" />
+            <Label layoutX="216.0" layoutY="223.0" text="Пароль" />
+            <PasswordField fx:id="password" layoutX="269.0" layoutY="219.0" />
             <Label layoutX="165.0" layoutY="252.0" text="Повторите пароль" />
             <PasswordField fx:id="confirmPassword" layoutX="269.0" layoutY="248.0" />
-            <TextField fx:id="login" layoutX="269.0" layoutY="153.0" />
-            <PasswordField fx:id="password" layoutX="269.0" layoutY="219.0" />
-            <Label layoutX="216.0" layoutY="223.0" text="Папроль" />
          </children>
       </Group>
       <Label layoutX="243.0" layoutY="36.0" text="Регистрация" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="15.0">
@@ -32,6 +33,6 @@
       </Label>
       <Button layoutX="342.0" layoutY="311.0" mnemonicParsing="false" onAction="#registration" text="Регистрация" />
       <Button layoutX="271.0" layoutY="311.0" mnemonicParsing="false" onAction="#cancel" text="Отмена" />
-      <Label fx:id="errorPassword" layoutX="446.0" layoutY="259.0" text="Label" />
+      <Label fx:id="errorPassword" layoutX="300.0" layoutY="336.0" prefHeight="17.0" prefWidth="58.0" AnchorPane.bottomAnchor="47.0" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="243.0" AnchorPane.topAnchor="336.0" />
    </children>
 </AnchorPane>
